Fixing text alignment for small screen riverwalk page banner

--- a/_assets/styles/pages/_riverwalk.scss
+++ b/_assets/styles/pages/_riverwalk.scss
@@ -52,8 +52,17 @@ body.riverwalk {
     padding-bottom: $padding-sm;
 
     .headline-one {
+      h2 {
+        text-align: left;
+      }
       p {
         @include p1;
+        text-align: left;
+      }
+      @include media-md {
+        .align-right {
+          text-align: right;
+        }
       }
     }
 
